--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.bardo"
-      android:versionCode="1"
-      android:versionName="0.1"
-      android:installLocation="auto">
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15"/>
+          package="com.bardo"
+          android:versionCode="1"
+          android:versionName="0.1"
+          android:installLocation="auto">
+    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="16"/>
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.Light">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+                 android:theme="@style/CustomTheme" >
         <activity android:name=".activity.StartActivity"
                   android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".activity.EditBeerActivity"/>
@@ -24,7 +25,7 @@
                 android:authorities="com.bardo.beerdog.provider"
                 android:name=".contentprovider.BeerContentProvider"
                 android:exported="false"
-        />
+                />
     </application>
 
 </manifest>
